    from the latter module.
  - the `Promise` constructor, as such, is deprecated in
    favor of the name `makePromise`, as conceived proper by
    Mark Miller in a style where TitleCase is reserved for
    constructors.
  - In the next backward-incompatible revision, "post" will
    be reverted to its original non-variadic behavior,
    receiving the post body as a single argument, albeit an
    array.  An "invoke" method will be introduced to provide
    the variadic convenience.
  - The `isResolved` and `isRejected` functions will be
    re-arranged as `isFulfilled`, and `isRejected`, since
    `isResolved` means either fullfilled or rejected.

Next minor release:
 - Exceptions thrown in the callbacks of a `when` call are
   now emitted to Node's `"uncaughtException"` `process`
   event in addition to being returned as a rejection reason.

0.2.8
 - Exceptions thrown in the callbacks of a `when` call
   are now consumed, warned, and transformed into
   rejections of the promise returned by `when`.

0.2.7
 - Fixed a minor bug in thenable assimilation, regressed
   because of the change in the forwarding protocol.
 - Fixed behavior of "q/util" `deep` method on dates and
   other primitives. Github issue #11.

0.2.6
 - Thenables (objects with a "then" method) are accepted
   and provided, bringing this implementation of Q
   into conformance with Promises/A, B, and D.
 - Added `makePromise`, to replace the `Promise` function
   eventually.
 - Rejections are now also duck-typed. A rejection is a
   promise with a valueOf method that returns a rejection
   descriptor. A rejection descriptor has a
   "promiseRejected" property equal to "true" and a
   "reason" property corresponding to the rejection reason.
 - Altered the `makePromise` API such that the `fallback`
   method no longer receives a superfluous `resolved` method
   after the `operator`.  The fallback method is responsible
   only for returning a resolution.  This breaks an